--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
     "sass": "^1.49.0",
-    "webp-converter": "^2.2.3"
+    "webp-converter": "2.2.3"
   },
   "homepage": "https://github.com/johnnygrossamer/rsschool-cv#readme"
 }
